--- a/app.json
+++ b/app.json
@@ -78,7 +78,7 @@
       "type": 3
     },
     {
-      "category": [
+      "categories": [
         "Backup",
         "Cloud",
         "TQH Apps",
@@ -130,6 +130,50 @@
         {
           "container": "/srv",
           "bind": "/srv"
+        }
+      ]
+    },
+    {
+      "categories": [
+        "Network",
+        "TQH Apps",
+        "Tools"
+      ],
+      "description": "AdGuard Home is a network-wide software for blocking ads & tracking. After you set it up, it\u2019ll cover ALL your home devices, and you don\u2019t need any client-side software for that. With the rise of Internet-Of-Things and connected devices, it becomes more and more important to be able to control your whole network.",
+      "name": "TQH-AdguardHome",
+      "image": "adguard/adguardhome:latest",
+      "network": "bridge",
+      "restart_policy": "unless-stopped",
+      "hostname": "TQH-AdguardHome",
+      "note": "Sync",
+      "logo": "https://static-00.iconduck.com/assets.00/adguard-home-icon-507x512-ovjn0dm6.png",
+      "platform": "linux",
+      "ports": [
+        "53:53/tcp",
+        "53:53/udp",
+        "67:67/udp",
+        "68:68/udp",
+        "80:80/tcp",
+        "443:443/tcp",
+        "443:443/udp",
+        "3000:3000/tcp",
+        "853:853/tcp",
+        "853:853/udp",
+        "5443:5443/udp",
+        "5443:5443/tcp",
+        "6060:6060/tcp"
+      ],
+      "title": "TQH AdGuard Home",
+      "type": 1,
+      "volumes": [
+        {
+          "container": "/opt/adguardhome/work",
+          "bind": "TQH-AdguardHome"
+
+        },
+        {
+          "container": "/opt/adguardhome/conf",
+          "bind": "TQH-AdguardHome"
         }
       ]
     }
