--- a/appsv3.json
+++ b/appsv3.json
@@ -50,7 +50,7 @@
         {
           "label": "CLOUD FOLDER",
           "name": "NEXTCLOUD_DATADIR",
-          "default": "/DATA/cloud",
+          "default": "/DATA/nextcloud",
           "description": "Nhập đường dẫn thư mục chứa dữ liệu, mặc định: /DATA/cloud"
         },
         {
